i dont know what im doing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h2>Tic Tac Toe Game!</h2>
+    </header>
+
+    <div class="board">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
 </body>
 <script src="main.js"></script>
 </html>
