im starting to know what im doing

--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
 <body>
     <header>
         <h2>Tic Tac Toe Game!</h2>
+
+        <p class="information">X</p>
     </header>
-
+<div class="wrapper">
     <div class="board">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="grid">
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+        </div>
     </div>
-
+</div>
 </body>
 <script src="main.js"></script>
 </html>
